--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "npx webpack --config webpack.config.js"
+    "build": "npx webpack --config webpack.config.js",
+    "start": "webpack-dev-server --open"
   },
   "devDependencies": {
     "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9"
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.2"
   }
 }
