--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
+    "watch": "webpack --watch",
     "build": "npx webpack --config webpack.config.js",
     "start": "webpack-dev-server --open"
   },
